--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nodejestut",
+  "name": "airtable",
   "version": "1.0.0",
-  "description": "NodeJS Tutorial",
-  "main": "index.js",
+  "description": "Airtable project",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "airtable": "^0.11.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1"
   },
